# alphazero_snakebyte

./: .gitignore  CMakeLists.txt  CMakeLists.txt - Copie.txt  README.md
agent/: alphazero.py  main.py  mcts.py  random.py  test_API.py  train.py
game/include/: Coord.hpp  Game.hpp  Grid.hpp  Utils.hpp
game/src/: Coord.cpp  Game.cpp  Grid.cpp  Utils.cpp  bindings.cpp  main.cpp
